Update Docker images and add Jupyter service to docker-compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3.8"
 
 x-spark-common: &spark-common
-  image: bitnami/spark:latest
+  image: bitnami/spark:3.5.0
   volumes:
     - ./jobs:/opt/bitnami/spark/jobs
     - ./data:/opt/bitnami/spark/data
@@ -20,7 +20,7 @@ x-spark-common: &spark-common
 
 services:
   spark-master:
-    image: bitnami/spark:latest
+    image: bitnami/spark:3.5.0
     volumes:
       - ./jobs:/opt/bitnami/spark/jobs
       - ./data:/opt/bitnami/spark/data
@@ -39,6 +39,23 @@ services:
 
   spark-worker-2:
     <<: *spark-common
+
+  jupyter:
+    image: jupyter/pyspark-notebook:spark-3.5.0
+    ports:
+      - "8888:8888"  # JupyterLab UI
+    volumes:
+      - ./jobs:/home/jovyan/work/jobs
+      - ./data:/home/jovyan/work/data
+      - ./jars:/home/jovyan/work/jars
+      - ./notebooks:/home/jovyan/work/notebooks
+    environment:
+      JUPYTER_ENABLE_LAB: "yes"
+      SPARK_MASTER: "spark://spark-master:7077"
+      PYSPARK_SUBMIT_ARGS: "--master spark://spark-master:7077 --jars /home/jovyan/work/jars/*.jar pyspark-shell"
+    command: start-notebook.sh --NotebookApp.token='' --NotebookApp.password=''
+    networks:
+      - pyspark-network
 
 networks:
   pyspark-network:
